# llm-finetune-service

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  pyproject.toml
docs/serving/: 2026-03-26-enterprise-to-casual-llm-fine-tuning-service.md  2026-03-27-recovered-training-note-recovered-serving-performance-note-enterprise-to.md  2026-03-29-reproducibility-guide.md  2026-03-30-recovered-training-note-reproducibility-guide.md
docs/training-notes/: 2026-03-27-recovered-training-note-recovered-serving-performance-note-enterprise-to.md  2026-03-29-reproducibility-guide.md  2026-04-29-recovered-training-note-recovered-training-note-reproducibility-guide.md
scripts/: benchmark.py  data_gen.py  train.py
src/: __init__.py
src/api/: app.py
