[tool.poetry]
name = "llm-finetune-service"
version = "0.1.0"
description = "Enterprise-to-Casual LLM Fine-Tuning Service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.1.0"
transformers = "^4.36.0"
peft = "^0.7.0"
accelerate = "^0.25.0"
datasets = "^2.16.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
redis = "^5.0.1"
slowapi = "^0.1.9"
requests = "^2.31.0"
pandas = "^2.1.4"
python-dotenv = "^1.0.0"
trl = "^0.7.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
